[package]
name = "crush"
version = "0.1.0"
authors = ["Patrick Chieppe <patrick.chieppe@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "yes"
codegen-units = 1

[dependencies]
rodio = "0.9.0"
hound = "3.4.0"
structopt = "0.3.3"
anyhow = "1.0.19"
clap = "2.33.0"
num = "0.2.0"
