[package]
name = "krusz"
version = "1.0.0"
authors = ["Patrick Chieppe <patrick.chieppe@hotmail.com>"]
edition = "2021"

[profile.release]
lto = "yes"
codegen-units = 1

[dependencies]
rodio = "0.15.0"
hound = "3.4.0"
structopt = "0.3.3"
clap = "2.33.0"
num = "0.4.0"
eyre = "0.6.8"
color-eyre = "0.6.1"
