[package]
name = "krusz"
version = "1.0.1"
description = "A tiny utility to bitcrush sounds"
authors = ["Patrick Chieppe <patrick.chieppe@hotmail.com>"]
edition = "2021"

[profile.release]
lto = "yes"
codegen-units = 1

[dependencies]
rodio = "0.15.0"
hound = "3.4.0"
num = "0.4.0"
eyre = "0.6.8"
color-eyre = "0.6.1"
clap = { version = "3.1.18", features = ["derive"] }
features = "0.10.0"
derive = "1.0.0"
